[package]
name = "um"
version = "0.1.0"
authors = ["Vincent Woltmann <vincent@woltmann.art>"]
edition = "2021"
description = "It is a bit like Nitril"
repository = "https://github.com/VincentWo/um"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
